Added Gameplay Time integration from Gameplay Time Tracker

--- a/notebooks/clean_main_db.ipynb
+++ b/notebooks/clean_main_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -11,15 +11,12 @@
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] The system cannot find the file specified: 'hard_to_choose'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-155-354e2c2b6c72>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     10\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mos\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     11\u001B[0m \u001B[1;32mif\u001B[0m \u001B[0mos\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgetcwd\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msplit\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'\\\\'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m!=\u001B[0m \u001B[0mglobal_imports\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mroot_folder\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 12\u001B[1;33m     \u001B[0mos\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mchdir\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mglobal_imports\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mroot_folder\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     13\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [WinError 2] The system cannot find the file specified: 'hard_to_choose'"
-     ]
+     "data": {
+      "text/plain": "'D:\\\\Projects\\\\hard_to_choose'"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -34,12 +31,13 @@
     "# Not necessary in a py file as jupyter does not set the path correctly\n",
     "import os\n",
     "if os.getcwd().split('\\\\')[-1] != global_imports.root_folder:\n",
-    "    os.chdir(global_imports.root_folder)"
+    "    os.chdir(global_imports.root_folder)\n",
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "def import_database_from_sql(sql_query,db_path):\n",
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "#Add any metadata needed to this list. Valid values are type names\n",
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "def extract_date(db):\n",
@@ -136,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def create_platform(db):\n",
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "def remove_hidden_games_by_gog(db):\n",
@@ -189,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "def remove_manual_hidden_games_by_user(db):\n",
@@ -213,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# Remove brackets and quotes around titlee\n",
@@ -274,12 +272,12 @@
      "name": "#%% Remove duplicates which have same title and platform\n"
     }
    },
-   "execution_count": null,
+   "execution_count": 27,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "def create_tag(db):\n",
@@ -348,12 +346,12 @@
      "name": "#%% Import Xbox Gamepass Databasse\n"
     }
    },
-   "execution_count": null,
+   "execution_count": 29,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "def remove_xboxgamepass(db, xdb):\n",
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "def import_origin():\n",
@@ -416,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "main_db = main_db.rename(columns={\"title\": \"Title\", \"date\": \"Release\", \"platform\": \"Platform\"})\n",
@@ -433,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "def group_platform(db):\n",
@@ -456,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "def manual_tagging(db):\n",
@@ -484,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "os.chdir('excel')\n",
@@ -505,12 +503,67 @@
     "            worksheet.set_column(idx, idx, max_len)  # set column width\n",
     "    writer.save()\n",
     "\n",
-    "write_excel(dbase_dict)"
+    "write_excel(dbase_dict)\n",
+    "\n",
+    "# Change Directory back to root\n",
+    "os.chdir('..')"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% Write final output to excel\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                       releaseKey                                   Title  \\\n0              xboxone_1686368600                A Plague Tale: Innocence   \n1    origin_Origin.OFR.50.0002490                               A Way Out   \n2              xboxone_1755599316     Age of Empires (Definitive Edition)   \n3              xboxone_2064168993   Age of Empires 2 (Definitive Edition)   \n4              xboxone_1777571402              Age of Wonders: Planetfall   \n..                            ...                                     ...   \n497            xboxone_1917938753                                Yakuza 0   \n498            xboxone_1636871347                           Yakuza Kiwami   \n499            xboxone_1910853412                   Yoku's Island Express   \n500  origin_Origin.OFR.50.0003735                            Yooka-Laylee   \n501              xboxone_33936946  Zoo Tycoon: Ultimate Animal Collection   \n\n      Release   Status    Length                        Platform  \\\n0    2019 May  Backlog     Short  Origin Premiere; Xbox Gamepass   \n1    2018 Mar  Playing  Infinite                 Origin Premiere   \n2    2018 Feb  Backlog  Infinite                   Xbox Gamepass   \n3    2019 Nov  Backlog  Infinite                   Xbox Gamepass   \n4    2019 Aug  Backlog  Infinite                   Xbox Gamepass   \n..        ...      ...       ...                             ...   \n497  2015 Mar    Tried      Long            Steam; Xbox Gamepass   \n498  2016 Jan  Backlog      Long                   Xbox Gamepass   \n499  2018 May  Backlog     Short  Origin Premiere; Xbox Gamepass   \n500  2017 Apr  Backlog     Short                 Origin Premiere   \n501  2017 Oct  Backlog  Infinite                   Xbox Gamepass   \n\n           GameplayTime  \n0                     0  \n1    1 Hours 46 Minutes  \n2                     0  \n3                     0  \n4                     0  \n..                  ...  \n497  4 Hours 57 Minutes  \n498                   0  \n499                   0  \n500                   0  \n501                   0  \n\n[502 rows x 7 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>releaseKey</th>\n      <th>Title</th>\n      <th>Release</th>\n      <th>Status</th>\n      <th>Length</th>\n      <th>Platform</th>\n      <th>GameplayTime</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>xboxone_1686368600</td>\n      <td>A Plague Tale: Innocence</td>\n      <td>2019 May</td>\n      <td>Backlog</td>\n      <td>Short</td>\n      <td>Origin Premiere; Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>origin_Origin.OFR.50.0002490</td>\n      <td>A Way Out</td>\n      <td>2018 Mar</td>\n      <td>Playing</td>\n      <td>Infinite</td>\n      <td>Origin Premiere</td>\n      <td>1 Hours 46 Minutes</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>xboxone_1755599316</td>\n      <td>Age of Empires (Definitive Edition)</td>\n      <td>2018 Feb</td>\n      <td>Backlog</td>\n      <td>Infinite</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>xboxone_2064168993</td>\n      <td>Age of Empires 2 (Definitive Edition)</td>\n      <td>2019 Nov</td>\n      <td>Backlog</td>\n      <td>Infinite</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>xboxone_1777571402</td>\n      <td>Age of Wonders: Planetfall</td>\n      <td>2019 Aug</td>\n      <td>Backlog</td>\n      <td>Infinite</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>497</th>\n      <td>xboxone_1917938753</td>\n      <td>Yakuza 0</td>\n      <td>2015 Mar</td>\n      <td>Tried</td>\n      <td>Long</td>\n      <td>Steam; Xbox Gamepass</td>\n      <td>4 Hours 57 Minutes</td>\n    </tr>\n    <tr>\n      <th>498</th>\n      <td>xboxone_1636871347</td>\n      <td>Yakuza Kiwami</td>\n      <td>2016 Jan</td>\n      <td>Backlog</td>\n      <td>Long</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>499</th>\n      <td>xboxone_1910853412</td>\n      <td>Yoku's Island Express</td>\n      <td>2018 May</td>\n      <td>Backlog</td>\n      <td>Short</td>\n      <td>Origin Premiere; Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>500</th>\n      <td>origin_Origin.OFR.50.0003735</td>\n      <td>Yooka-Laylee</td>\n      <td>2017 Apr</td>\n      <td>Backlog</td>\n      <td>Short</td>\n      <td>Origin Premiere</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>501</th>\n      <td>xboxone_33936946</td>\n      <td>Zoo Tycoon: Ultimate Animal Collection</td>\n      <td>2017 Oct</td>\n      <td>Backlog</td>\n      <td>Infinite</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>502 rows × 7 columns</p>\n</div>"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add_gameplay_time(db):\n",
+    "    time_query = 'SELECT ProductName, StatTotalFullRuntime FROM Applications'\n",
+    "    time_db = import_database_from_sql(time_query, global_imports.gtt_db_path)\n",
+    "    db = db.merge(time_db, how='left', left_on='Title', right_on='ProductName')\n",
+    "    db = db.drop('ProductName', axis=1)\n",
+    "    db['StatTotalFullRuntime'] = db['StatTotalFullRuntime'].fillna(0)\n",
+    "    db = db.rename(columns={\"StatTotalFullRuntime\": \"GameplayTime\"})\n",
+    "\n",
+    "    def convert_to_hours(x):\n",
+    "        if x:\n",
+    "\n",
+    "            # The value of gameplay has additional zeroes. Remove zeroes and convert to minutes\n",
+    "            x = x/(10000000*60)\n",
+    "            hours = int(x/60)\n",
+    "            minutes = int(x%60)\n",
+    "\n",
+    "            # Return output according to whether minutes or hours are zero\n",
+    "            if hours and minutes:\n",
+    "                return str(hours) + ' Hours ' + str(minutes) + ' Minutes'\n",
+    "            elif hours:\n",
+    "                return str(hours) + ' Hours'\n",
+    "            elif minutes:\n",
+    "                str(minutes) + ' Minutes'\n",
+    "        else:\n",
+    "            return 0\n",
+    "    db['GameplayTime'] = db['GameplayTime'].apply(convert_to_hours)\n",
+    "    return db\n",
+    "\n",
+    "main_db = add_gameplay_time(main_db)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Import Gameplay Time Tracker\n"
     }
    }
   }
