Added report functionality and saving database using pickle

--- a/notebooks/clean_main_db.ipynb
+++ b/notebooks/clean_main_db.ipynb
@@ -2,42 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%% import statements\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'D:\\\\Projects\\\\hard_to_choose'"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sqlite3\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import global_imports\n",
-    "from src import xbox_spreadsheet, origin_parse\n",
+    "from src import xbox_spreadsheet, origin_parse, report, write_to_excel\n",
     "import re\n",
     "import json\n",
     "\n",
     "# Not necessary in a py file as jupyter does not set the path correctly\n",
     "import os\n",
     "if os.getcwd().split('\\\\')[-1] != global_imports.root_folder:\n",
-    "    os.chdir(global_imports.root_folder)\n",
-    "os.getcwd()"
+    "    os.chdir(global_imports.root_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "def import_database_from_sql(sql_query,db_path):\n",
@@ -62,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "#Add any metadata needed to this list. Valid values are type names\n",
@@ -103,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "def extract_date(db):\n",
@@ -134,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "def create_platform(db):\n",
@@ -164,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "def remove_hidden_games_by_gog(db):\n",
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "def remove_manual_hidden_games_by_user(db):\n",
@@ -211,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "# Remove brackets and quotes around titlee\n",
@@ -272,12 +262,12 @@
      "name": "#%% Remove duplicates which have same title and platform\n"
     }
    },
-   "execution_count": 27,
+   "execution_count": 31,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "def create_tag(db):\n",
@@ -346,12 +336,12 @@
      "name": "#%% Import Xbox Gamepass Databasse\n"
     }
    },
-   "execution_count": 29,
+   "execution_count": 33,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "def remove_xboxgamepass(db, xdb):\n",
@@ -393,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "def import_origin():\n",
@@ -414,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "main_db = main_db.rename(columns={\"title\": \"Title\", \"date\": \"Release\", \"platform\": \"Platform\"})\n",
@@ -431,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "def group_platform(db):\n",
@@ -454,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "def manual_tagging(db):\n",
@@ -482,53 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "outputs": [],
-   "source": [
-    "os.chdir('excel')\n",
-    "dbase_dict = {'Games': main_db, 'Xbox Gamepass': xbox_db, 'Origin Access': origin_db}\n",
-    "\n",
-    "def write_excel(data_dict):\n",
-    "    filename = 'Games.xlsx'\n",
-    "    writer = pd.ExcelWriter(filename, engine='xlsxwriter')\n",
-    "    for sheetname, db in data_dict.items():  # loop through `dict` of dataframes\n",
-    "        db.to_excel(writer, sheet_name=sheetname, index=False)  # send df to writer\n",
-    "        worksheet = writer.sheets[sheetname]  # pull worksheet object\n",
-    "        for idx, col in enumerate(db):  # loop through all columns\n",
-    "            series = db[col]\n",
-    "            max_len = max((\n",
-    "                series.astype(str).map(len).max(),  # len of largest item\n",
-    "                len(str(series.name))  # len of column name/header\n",
-    "            )) + 1  # adding a little extra space\n",
-    "            worksheet.set_column(idx, idx, max_len)  # set column width\n",
-    "    writer.save()\n",
-    "\n",
-    "write_excel(dbase_dict)\n",
-    "\n",
-    "# Change Directory back to root\n",
-    "os.chdir('..')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% Write final output to excel\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                       releaseKey                                   Title  \\\n0              xboxone_1686368600                A Plague Tale: Innocence   \n1    origin_Origin.OFR.50.0002490                               A Way Out   \n2              xboxone_1755599316     Age of Empires (Definitive Edition)   \n3              xboxone_2064168993   Age of Empires 2 (Definitive Edition)   \n4              xboxone_1777571402              Age of Wonders: Planetfall   \n..                            ...                                     ...   \n497            xboxone_1917938753                                Yakuza 0   \n498            xboxone_1636871347                           Yakuza Kiwami   \n499            xboxone_1910853412                   Yoku's Island Express   \n500  origin_Origin.OFR.50.0003735                            Yooka-Laylee   \n501              xboxone_33936946  Zoo Tycoon: Ultimate Animal Collection   \n\n      Release   Status    Length                        Platform  \\\n0    2019 May  Backlog     Short  Origin Premiere; Xbox Gamepass   \n1    2018 Mar  Playing  Infinite                 Origin Premiere   \n2    2018 Feb  Backlog  Infinite                   Xbox Gamepass   \n3    2019 Nov  Backlog  Infinite                   Xbox Gamepass   \n4    2019 Aug  Backlog  Infinite                   Xbox Gamepass   \n..        ...      ...       ...                             ...   \n497  2015 Mar    Tried      Long            Steam; Xbox Gamepass   \n498  2016 Jan  Backlog      Long                   Xbox Gamepass   \n499  2018 May  Backlog     Short  Origin Premiere; Xbox Gamepass   \n500  2017 Apr  Backlog     Short                 Origin Premiere   \n501  2017 Oct  Backlog  Infinite                   Xbox Gamepass   \n\n           GameplayTime  \n0                     0  \n1    1 Hours 46 Minutes  \n2                     0  \n3                     0  \n4                     0  \n..                  ...  \n497  4 Hours 57 Minutes  \n498                   0  \n499                   0  \n500                   0  \n501                   0  \n\n[502 rows x 7 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>releaseKey</th>\n      <th>Title</th>\n      <th>Release</th>\n      <th>Status</th>\n      <th>Length</th>\n      <th>Platform</th>\n      <th>GameplayTime</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>xboxone_1686368600</td>\n      <td>A Plague Tale: Innocence</td>\n      <td>2019 May</td>\n      <td>Backlog</td>\n      <td>Short</td>\n      <td>Origin Premiere; Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>origin_Origin.OFR.50.0002490</td>\n      <td>A Way Out</td>\n      <td>2018 Mar</td>\n      <td>Playing</td>\n      <td>Infinite</td>\n      <td>Origin Premiere</td>\n      <td>1 Hours 46 Minutes</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>xboxone_1755599316</td>\n      <td>Age of Empires (Definitive Edition)</td>\n      <td>2018 Feb</td>\n      <td>Backlog</td>\n      <td>Infinite</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>xboxone_2064168993</td>\n      <td>Age of Empires 2 (Definitive Edition)</td>\n      <td>2019 Nov</td>\n      <td>Backlog</td>\n      <td>Infinite</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>xboxone_1777571402</td>\n      <td>Age of Wonders: Planetfall</td>\n      <td>2019 Aug</td>\n      <td>Backlog</td>\n      <td>Infinite</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>497</th>\n      <td>xboxone_1917938753</td>\n      <td>Yakuza 0</td>\n      <td>2015 Mar</td>\n      <td>Tried</td>\n      <td>Long</td>\n      <td>Steam; Xbox Gamepass</td>\n      <td>4 Hours 57 Minutes</td>\n    </tr>\n    <tr>\n      <th>498</th>\n      <td>xboxone_1636871347</td>\n      <td>Yakuza Kiwami</td>\n      <td>2016 Jan</td>\n      <td>Backlog</td>\n      <td>Long</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>499</th>\n      <td>xboxone_1910853412</td>\n      <td>Yoku's Island Express</td>\n      <td>2018 May</td>\n      <td>Backlog</td>\n      <td>Short</td>\n      <td>Origin Premiere; Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>500</th>\n      <td>origin_Origin.OFR.50.0003735</td>\n      <td>Yooka-Laylee</td>\n      <td>2017 Apr</td>\n      <td>Backlog</td>\n      <td>Short</td>\n      <td>Origin Premiere</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>501</th>\n      <td>xboxone_33936946</td>\n      <td>Zoo Tycoon: Ultimate Animal Collection</td>\n      <td>2017 Oct</td>\n      <td>Backlog</td>\n      <td>Infinite</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>502 rows × 7 columns</p>\n</div>"
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "def add_gameplay_time(db):\n",
     "    time_query = 'SELECT ProductName, StatTotalFullRuntime FROM Applications'\n",
@@ -564,6 +509,78 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% Import Gameplay Time Tracker\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "db_list = {'main_db':main_db, 'xbox_db':xbox_db, 'origin_db':origin_db}\n",
+    "\n",
+    "def save_dataframe(dict_of_db):\n",
+    "    for key,value in dict_of_db.items():\n",
+    "        old = 'data/' + str(key) + '_old'\n",
+    "        new = 'data/' + str(key)\n",
+    "        os.remove(old)\n",
+    "        os.rename(new, old)\n",
+    "        value.to_pickle(new)\n",
+    "\n",
+    "save_dataframe(db_list)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Save Dataframe to /data\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully written to excel/Games.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "write_to_excel.main()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Write database to excel\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Report for Game Database\n",
+      "Successfully generated Game database on 2020-07-27 00:45:03.345804\n",
+      "Total number of games - 502\n",
+      "No new games added since last run\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "report.main()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Generate Report logs\n"
     }
    }
   }
