Fixed bug with minutes not showing if time less than 60

--- a/notebooks/clean_main_db.ipynb
+++ b/notebooks/clean_main_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def import_database_from_sql(sql_query,db_path):\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "#Add any metadata needed to this list. Valid values are type names\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def extract_date(db):\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def create_platform(db):\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def remove_hidden_games_by_gog(db):\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def remove_manual_hidden_games_by_user(db):\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Remove brackets and quotes around titlee\n",
@@ -262,12 +262,12 @@
      "name": "#%% Remove duplicates which have same title and platform\n"
     }
    },
-   "execution_count": 31,
+   "execution_count": 9,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def create_tag(db):\n",
@@ -336,12 +336,12 @@
      "name": "#%% Import Xbox Gamepass Databasse\n"
     }
    },
-   "execution_count": 33,
+   "execution_count": 11,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def remove_xboxgamepass(db, xdb):\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def import_origin():\n",
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "main_db = main_db.rename(columns={\"title\": \"Title\", \"date\": \"Release\", \"platform\": \"Platform\"})\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "def group_platform(db):\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "def manual_tagging(db):\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "def add_gameplay_time(db):\n",
@@ -497,7 +497,7 @@
     "            elif hours:\n",
     "                return str(hours) + ' Hours'\n",
     "            elif minutes:\n",
-    "                str(minutes) + ' Minutes'\n",
+    "                return str(minutes) + ' Minutes'\n",
     "        else:\n",
     "            return 0\n",
     "    db['GameplayTime'] = db['GameplayTime'].apply(convert_to_hours)\n",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "db_list = {'main_db':main_db, 'xbox_db':xbox_db, 'origin_db':origin_db}\n",
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -560,15 +560,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Report for Game Database\n",
-      "Successfully generated Game database on 2020-07-27 00:45:03.345804\n",
+      "Successfully generated Game database on 2020-07-27 00:57:47.868518\n",
       "Total number of games - 502\n",
+      "Last run at - 2020-07-27 00:57:23.305213\n",
       "No new games added since last run\n",
       "\n"
      ]
@@ -581,6 +583,34 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% Generate Report logs\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(0, 2)"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 1246077751\n",
+    "# The value of gameplay has additional zeroes. Remove zeroes and convert to minutes\n",
+    "x = x/(10000000*60)\n",
+    "hours = int(x/60)\n",
+    "minutes = int(x%60)\n",
+    "hours, minutes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
