--- a/notebooks/clean_main_db.ipynb
+++ b/notebooks/clean_main_db.ipynb
@@ -336,12 +336,12 @@
      "name": "#%% Import Xbox Gamepass Databasse\n"
     }
    },
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def remove_xboxgamepass(db, xdb):\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "def import_origin():\n",
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "main_db = main_db.rename(columns={\"title\": \"Title\", \"date\": \"Release\", \"platform\": \"Platform\"})\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "def group_platform(db):\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "def manual_tagging(db):\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "def add_gameplay_time(db):\n",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "db_list = {'main_db':main_db, 'xbox_db':xbox_db, 'origin_db':origin_db}\n",
@@ -538,13 +538,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully written to excel/Games.xlsx\n"
+     "ename": "FileCreateError",
+     "evalue": "[Errno 13] Permission denied: 'Games.xlsx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mPermissionError\u001B[0m                           Traceback (most recent call last)",
+      "\u001B[1;32md:\\projects\\hard_to_choose\\venv\\lib\\site-packages\\xlsxwriter\\workbook.py\u001B[0m in \u001B[0;36mclose\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    315\u001B[0m             \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 316\u001B[1;33m                 \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_store_workbook\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    317\u001B[0m             \u001B[1;32mexcept\u001B[0m \u001B[0mIOError\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32md:\\projects\\hard_to_choose\\venv\\lib\\site-packages\\xlsxwriter\\workbook.py\u001B[0m in \u001B[0;36m_store_workbook\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    631\u001B[0m         \u001B[1;32mexcept\u001B[0m \u001B[0mIOError\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 632\u001B[1;33m             \u001B[1;32mraise\u001B[0m \u001B[0me\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    633\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32md:\\projects\\hard_to_choose\\venv\\lib\\site-packages\\xlsxwriter\\workbook.py\u001B[0m in \u001B[0;36m_store_workbook\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    629\u001B[0m             xlsx_file = ZipFile(self.filename, \"w\", compression=ZIP_DEFLATED,\n\u001B[1;32m--> 630\u001B[1;33m                                 allowZip64=self.allow_zip64)\n\u001B[0m\u001B[0;32m    631\u001B[0m         \u001B[1;32mexcept\u001B[0m \u001B[0mIOError\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python37\\lib\\zipfile.py\u001B[0m in \u001B[0;36m__init__\u001B[1;34m(self, file, mode, compression, allowZip64, compresslevel)\u001B[0m\n\u001B[0;32m   1239\u001B[0m                 \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 1240\u001B[1;33m                     \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfp\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mio\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mopen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfile\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mfilemode\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   1241\u001B[0m                 \u001B[1;32mexcept\u001B[0m \u001B[0mOSError\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mPermissionError\u001B[0m: [Errno 13] Permission denied: 'Games.xlsx'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001B[1;31mFileCreateError\u001B[0m                           Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-20-4766e72f7320>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mwrite_to_excel\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmain\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mD:\\Projects\\hard_to_choose\\src\\write_to_excel.py\u001B[0m in \u001B[0;36mmain\u001B[1;34m()\u001B[0m\n\u001B[0;32m     24\u001B[0m             )) + 1  # adding a little extra space\n\u001B[0;32m     25\u001B[0m             \u001B[0mworksheet\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mset_column\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0midx\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0midx\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmax_len\u001B[0m\u001B[1;33m)\u001B[0m  \u001B[1;31m# set column width\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 26\u001B[1;33m     \u001B[0mwriter\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msave\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     27\u001B[0m     \u001B[0mos\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mchdir\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'..'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     28\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Successfully written to excel/Games.xlsx\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32md:\\projects\\hard_to_choose\\venv\\lib\\site-packages\\pandas\\io\\excel\\_xlsxwriter.py\u001B[0m in \u001B[0;36msave\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    193\u001B[0m         \"\"\"\n\u001B[0;32m    194\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 195\u001B[1;33m         \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mbook\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mclose\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    196\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    197\u001B[0m     def write_cells(\n",
+      "\u001B[1;32md:\\projects\\hard_to_choose\\venv\\lib\\site-packages\\xlsxwriter\\workbook.py\u001B[0m in \u001B[0;36mclose\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    316\u001B[0m                 \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_store_workbook\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    317\u001B[0m             \u001B[1;32mexcept\u001B[0m \u001B[0mIOError\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 318\u001B[1;33m                 \u001B[1;32mraise\u001B[0m \u001B[0mFileCreateError\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0me\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    319\u001B[0m             \u001B[1;32mexcept\u001B[0m \u001B[0mLargeZipFile\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    320\u001B[0m                 raise FileSizeError(\"Filesize would require ZIP64 extensions. \"\n",
+      "\u001B[1;31mFileCreateError\u001B[0m: [Errno 13] Permission denied: 'Games.xlsx'"
      ]
     }
    ],
@@ -560,22 +574,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Report for Game Database\n",
-      "Successfully generated Game database on 2020-07-27 00:57:47.868518\n",
-      "Total number of games - 502\n",
-      "Last run at - 2020-07-27 00:57:23.305213\n",
-      "No new games added since last run\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "report.main()"
    ],
@@ -588,24 +588,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(0, 2)"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "x = 1246077751\n",
-    "# The value of gameplay has additional zeroes. Remove zeroes and convert to minutes\n",
-    "x = x/(10000000*60)\n",
-    "hours = int(x/60)\n",
-    "minutes = int(x%60)\n",
-    "hours, minutes"
+    "temp1 = 'SELECT releaseKey, isDlc, isVisibleInLibrary FROM ReleaseProperties'\n",
+    "temp2 = import_database_from_sql(temp1, global_imports.main_db_path)\n",
+    "\n",
+    "temp1 = 'SELECT releaseKey, isHidden FROM UserReleaseProperties'\n",
+    "temp3 = import_database_from_sql(temp1, global_imports.main_db_path)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "temp3[temp3['releaseKey'] == 'origin_Origin.OFR.50.0002732']\n",
+    "main_db[main_db['Title'].str.contains('Battlefield')]\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
